# ITC-8

./: .gitignore  README.md  a
Classwork/Arman_Khachik/: calc.py
Classwork/Davit/: calc.py  sendSkypeMassage.py
Classwork/Smbat_Mary/: vimrc
Configs/: vimrc.txt
Homework/Elya/: calculator.py
Homework/Nelli/: .json.py.swp  json.py
Homework/Vrezh/: a.txt
Homework/Vrezh/openCV/findConture/: CMakeLists.txt  actImages  main.cpp
Homework/Vrezh/openCV/saveVideoImages/: CMakeLists.txt  READMY.txt  main.cpp
IMForms_Project/: index.html
IMForms_Project/Documentation/: IMForms_Specification.odt  IMForms_Test_Plan.ods
IMForms_Project/css/: create.css  element_style.css  elements.css  elementsNew.css  menu.css  modal.css  select.css  style.css  table.css
IMForms_Project/html/: create.html  cv.html  edu.js  element_style.html  elements.html  elementsNew.html  select.html  table.html
IMForms_Project/js/: convertFormValuesToJson.js  create.js  cv.js  index.js  modal.js  modal_title.js  validation.js
IMForms_Project_Angular/: index.html
IMForms_Project_Angular/Documentation/: IMForms_Test_Plan.ods
IMForms_Project_Angular/css/: menu.css  select.css
IMForms_Project_Angular/html/: create.html  cv.html
IMForms_Project_Angular/js/: create.js  dropdown.js  validation.js
IMForms_Project_AngularJS/app/: createApp.js  cvApp.js
IMForms_Project_AngularJS/css/: modal.css
IMForms_Project_AngularJS/html/: create.html  cv.html  select.html  table.html
Nelli/python/: calc.py
iBlog/: .gitignore
iMessanger/: local.properties
iMessenger/: local.properties
(+1896 files in other folders)
